--- a/monroe-mplane/tstat.conf
+++ b/monroe-mplane/tstat.conf
@@ -2,7 +2,7 @@
 -i any 								# listen on all Interfaces
 -Z									# create gzip compressed log files
 -f tstat-conf/filter.txt            # input pcap filter
-#-N tstat-conf/subnets.txt           # TODO set of subnets representing the set of local client monitored
+-N tstat-conf/subnets.txt           # TODO set of subnets representing the set of local client monitored
 -R tstat-conf/rrd.conf              # RRD configuration
 -H tstat-conf/histo.conf            # histogram configuration
 -T tstat-conf/runtime.conf          # runtime configuration file
