--- a/monroe-mplane/tstat-conf/rrd.conf
+++ b/monroe-mplane/tstat-conf/rrd.conf
@@ -14,61 +14,47 @@
 #
 #
 #
-L7_HTTP_num_in       idx:0,1,2,3,4,5,6,7,8,9,10,11,12,13,14,15,16,17,18,19,20
-L7_HTTP_num_out      idx:0,1,2,3,4,5,6,7,8,9,10,11,12,13,14,15,16,17,18,19,20
-L7_HTTP_num_loc      idx:0,1,2,3,4,5,6,7,8,9,10,11,12,13,14,15,16,17,18,19,20
-L7_HTTP_num_c_in       idx:0,1,2,3,4,5,6,7,8,9,10,11,12,13,15,16,17,18,19,20
-L7_HTTP_num_c_out      idx:0,1,2,3,4,5,6,7,8,9,10,11,12,13,15,16,17,18,19,20
-L7_HTTP_num_nc_in       idx:0,1,2,3,4,5,6,7,8,9,10,11,12,13,15,16,17,18,19,20
-L7_HTTP_num_nc_out      idx:0,1,2,3,4,5,6,7,8,9,10,11,12,13,15,16,17,18,19,20
-http_bitrate_in      idx:0,1,2,3,4,5,6,7,8,9,10,11,12,13,14,15,16,17,18,19,20
-http_bitrate_out     idx:0,1,2,3,4,5,6,7,8,9,10,11,12,13,14,15,16,17,18,19,20
-http_bitrate_loc     idx:0,1,2,3,4,5,6,7,8,9,10,11,12,13,14,15,16,17,18,19,20
-http_bitrate_c_in      idx:0,1,2,3,4,5,6,7,8,9,10,11,12,13,15,16,17,18,19,20
-http_bitrate_c_out     idx:0,1,2,3,4,5,6,7,8,9,10,11,12,13,15,16,17,18,19,20
-http_bitrate_nc_in      idx:0,1,2,3,4,5,6,7,8,9,10,11,12,13,15,16,17,18,19,20
-http_bitrate_nc_out     idx:0,1,2,3,4,5,6,7,8,9,10,11,12,13,15,16,17,18,19,20
+L7_HTTP_num_in       idx:0,1,2,4,6,7,11,12,13,15,18
+L7_HTTP_num_out      idx:0,1,2,4,6,7,11,12,13,15,18
+L7_HTTP_num_loc      idx:0,1,2,4,6,7,11,12,13,15,18
+http_bitrate_in      idx:0,1,2,4,6,7,11,12,13,15,18
+http_bitrate_out     idx:0,1,2,4,6,7,11,12,13,15,18
+http_bitrate_loc     idx:0,1,2,4,6,7,11,12,13,15,18
 #
-L7_WEB_num_in       idx:0,1,2,3,4,5,6
-L7_WEB_num_out      idx:0,1,2,3,4,5,6
-L7_WEB_num_loc      idx:0,1,2,3,4,5,6
-web_bitrate_in      idx:0,1,2,3,4,5,6
-web_bitrate_out     idx:0,1,2,3,4,5,6
-web_bitrate_loc     idx:0,1,2,3,4,5,6
+#  NETFLIX 7
+L7_WEB_num_in       idx:0,1,2,4,6,7
+L7_WEB_num_out      idx:0,1,2,4,6,7
+L7_WEB_num_loc      idx:0,1,2,4,6,7
+web_bitrate_in      idx:0,1,2,4,6,7
+web_bitrate_out     idx:0,1,2,4,6,7
+web_bitrate_loc     idx:0,1,2,4,6,7
 #=====================================================================
-#       CHAT flow identified
-# MSN_CHAT_HISTO        1
-# MSN_PRESENCE_HISTO    2
-# JABBER_CHAT_HISTO     3
-# JABBER_PRESENCE_HISTO 4
-# YMSG_CHAT_HISTO       5
-# YMSG_PRESENCE_HISTO   6
-# recall TO subtract 1 due to the histo storage...
+#      TLS content identified
 #---------------------------------------------------------------------
-chat_flow_num              idx:0,1,2,3,4,5
+#  see struct.h for TLS content definition
+#
+#
+#L7_TLS_num_in       idx:0,1,2,3,4,5,6,7
+#L7_TLS_num_out      idx:0,1,2,3,4,5,6,7
+#L7_TLS_num_loc      idx:0,1,2,3,4,5,6,7
+#tls_bitrate_in      idx:0,1,2,3,4,5,6,7
+#tls_bitrate_out     idx:0,1,2,3,4,5,6,7
+#tls_bitrate_loc     idx:0,1,2,3,4,5,6,7
 #=====================================================================
 #       UDP L7 flow identified
 #  see tstat.h for L7_flow definition
 #---------------------------------------------------------------------
-L7_UDP_num_in      idx:1,2,5,6,11,12,13,14,15,16,17,29,30,31,32,34,36,40,41,42,43,49,other
-L7_UDP_num_out     idx:1,2,5,6,11,12,13,14,15,16,17,29,30,31,32,34,36,40,41,42,43,49,other
-L7_UDP_num_loc     idx:1,2,5,6,11,12,13,14,15,16,17,29,30,31,32,34,36,40,41,42,43,49,other
-L7_UDP_num_c_in      idx:1,2,5,6,11,12,13,14,15,16,17,29,30,31,32,34,36,40,41,42,43,49,other
-L7_UDP_num_c_out     idx:1,2,5,6,11,12,13,14,15,16,17,29,30,31,32,34,36,40,41,42,43,49,other
-L7_UDP_num_nc_in      idx:1,2,5,6,11,12,13,14,15,16,17,29,30,31,32,34,36,40,41,42,43,49,other
-L7_UDP_num_nc_out     idx:1,2,5,6,11,12,13,14,15,16,17,29,30,31,32,34,36,40,41,42,43,49,other
+L7_UDP_num_in      idx:1,2,11,12,14,15,16,34,36,49,other
+L7_UDP_num_out     idx:1,2,11,12,14,15,16,34,36,49,other
+L7_UDP_num_loc     idx:1,2,11,12,14,15,16,34,36,49,other
 #
 #=====================================================================
 #       TCP L7 flow identified
 #  see tstat.h for L7_flow definition
 #---------------------------------------------------------------------
-L7_TCP_num_in      idx:0,1,2,3,4,5,6,7,8,9,10,11,14,15,16,17,19,25,26,27,28,33,37,38,39,49,other
-L7_TCP_num_out     idx:0,1,2,3,4,5,6,7,8,9,10,11,14,15,16,17,19,25,26,27,28,33,37,38,39,49,other
-L7_TCP_num_loc     idx:0,1,2,3,4,5,6,7,8,9,10,11,14,15,16,17,19,25,26,27,28,33,37,38,39,49,other
-L7_TCP_num_c_in      idx:0,1,2,3,4,5,6,7,8,9,10,11,14,15,16,17,19,25,26,27,28,33,37,38,39,49,other
-L7_TCP_num_c_out     idx:0,1,2,3,4,5,6,7,8,9,10,11,14,15,16,17,19,25,26,27,28,33,37,38,39,49,other
-L7_TCP_num_nc_in      idx:0,1,2,3,4,5,6,7,8,9,10,11,14,15,16,17,19,25,26,27,28,33,37,38,39,49,other
-L7_TCP_num_nc_out     idx:0,1,2,3,4,5,6,7,8,9,10,11,14,15,16,17,19,25,26,27,28,33,37,38,39,49,other
+L7_TCP_num_in      idx:0,11,15,28,33,37,38,39,49,other
+L7_TCP_num_out     idx:0,11,15,28,33,37,38,39,49,other
+L7_TCP_num_loc     idx:0,11,15,28,33,37,38,39,49,other
 #
 #=====================================================================
 #       VIDEO content identified
@@ -81,15 +67,6 @@ L7_VIDEO_num_loc      idx:1,2,3,4,5,6,7,8,9,10,11,12,13
 video_rate_in      idx:1,2,3,4,5,6,7,8,9,10,11,12,13
 video_rate_out     idx:1,2,3,4,5,6,7,8,9,10,11,12,13
 video_rate_loc     idx:1,2,3,4,5,6,7,8,9,10,11,12,13
-#== Uncomment the following lines if you want to connect 'cloud' related statistics
-L7_VIDEO_num_c_in       idx:1,2,3,4,5,6,7,8,9,10,11,12,13
-L7_VIDEO_num_c_out      idx:1,2,3,4,5,6,7,8,9,10,11,12,13
-L7_VIDEO_num_nc_in       idx:1,2,3,4,5,6,7,8,9,10,11,12,13
-L7_VIDEO_num_nc_out      idx:1,2,3,4,5,6,7,8,9,10,11,12,13
-video_rate_c_in      idx:1,2,3,4,5,6,7,8,9,10,11,12,13
-video_rate_c_out     idx:1,2,3,4,5,6,7,8,9,10,11,12,13
-video_rate_nc_in      idx:1,2,3,4,5,6,7,8,9,10,11,12,13
-video_rate_nc_out     idx:1,2,3,4,5,6,7,8,9,10,11,12,13
 #
 #=====================================================================
 #        flow number
@@ -106,35 +83,23 @@ L4_flow_number                 idx:0,1
 ip_bitrate_in                  idx:0,1,2
 ip_bitrate_out                 idx:0,1,2
 ip_bitrate_loc                 idx:0,1,2
-ip_bitrate_c_in                idx:0,1,2
-ip_bitrate_c_out               idx:0,1,2
-ip_bitrate_nc_in               idx:0,1,2
-ip_bitrate_nc_out              idx:0,1,2
-#=====================================================================
 #=====================================================================
 #         TCP application layer bitrate
 #  see tstat.h for L7_flow definition
 #---------------------------------------------------------------------
-tcp_bitrate_in      idx:0,1,2,3,4,7,8,9,10,11,14,15,16,17,19,25,26,27,28,33,37,38,39,49,other
-tcp_bitrate_out     idx:0,1,2,3,4,7,8,9,10,11,14,15,16,17,19,25,26,27,28,33,37,38,39,49,other
-tcp_bitrate_loc     idx:0,1,2,3,4,7,8,9,10,11,14,15,16,17,19,25,26,27,28,33,37,38,39,49,other
-tcp_bitrate_c_in      idx:0,1,2,3,4,7,8,9,10,11,14,15,16,17,19,25,26,27,28,33,37,38,39,49,other
-tcp_bitrate_c_out     idx:0,1,2,3,4,7,8,9,10,11,14,15,16,17,19,25,26,27,28,33,37,38,39,49,other
-tcp_bitrate_nc_in      idx:0,1,2,3,4,7,8,9,10,11,14,15,16,17,19,25,26,27,28,33,37,38,39,49,other
-tcp_bitrate_nc_out     idx:0,1,2,3,4,7,8,9,10,11,14,15,16,17,19,25,26,27,28,33,37,38,39,49,other
+tcp_bitrate_in      idx:0,11,15,28,33,37,38,39,49,other
+tcp_bitrate_out     idx:0,11,15,28,33,37,38,39,49,other
+tcp_bitrate_loc     idx:0,11,15,28,33,37,38,39,49,other
 #=====================================================================
 #         UDP application layer bitrate
 #  see tstat.h for L7_flow definition
 #---------------------------------------------------------------------
-udp_bitrate_in       idx:1,2,5,6,11,12,13,14,15,16,17,29,30,31,32,34,36,40,41,42,43,49,other
-udp_bitrate_out      idx:1,2,5,6,11,12,13,14,15,16,17,29,30,31,32,34,36,40,41,42,43,49,other
-udp_bitrate_loc      idx:1,2,5,6,11,12,13,14,15,16,17,29,30,31,32,34,36,40,41,42,43,49,other
-udp_bitrate_c_in       idx:1,2,5,6,11,12,13,14,15,16,17,29,30,31,32,34,36,40,41,42,43,49,other
-udp_bitrate_c_out      idx:1,2,5,6,11,12,13,14,15,16,17,29,30,31,32,34,36,40,41,42,43,49,other
-udp_bitrate_nc_in       idx:1,2,5,6,11,12,13,14,15,16,17,29,30,31,32,34,36,40,41,42,43,49,other
-udp_bitrate_nc_out      idx:1,2,5,6,11,12,13,14,15,16,17,29,30,31,32,34,36,40,41,42,43,49,other
+udp_bitrate_in       idx:1,2,11,12,14,15,16,34,36,49,other
+udp_bitrate_out      idx:1,2,11,12,14,15,16,34,36,49,other
+udp_bitrate_loc      idx:1,2,11,12,14,15,16,34,36,49,other
 #=====================================================================
 #       IP packet length
+# 		ADD SOME INTERESTING PACKET LENGTH
 #---------------------------------------------------------------------
 ip_len_in                       avg min max stdev prc:50,95,99 idx:40,1500,other
 ip_len_out                      avg min max stdev prc:50,95,99 idx:40,1500,other
@@ -145,11 +110,11 @@ ip_len_loc                      avg min max stdev prc:50,95,99 idx:40,1500,other
 #=====================================================================
 #       IP protocols
 #---------------------------------------------------------------------
-#        1 = ICMP, 6 = TCP, 17 = UDP
+#        1 = ICMP, 6 = TCP, 17 = UDP, 41 = IPV6
 #
-ip_protocol_in                     idx:1,6,17,other
-ip_protocol_out                    idx:1,6,17,other
-ip_protocol_loc                    idx:1,6,17,other
+ip_protocol_in                     idx:1,6,17,41,other
+ip_protocol_out                    idx:1,6,17,41,other
+ip_protocol_loc                    idx:1,6,17,41,other
 #
 #
 #=====================================================================
@@ -174,12 +139,12 @@ ip_protocol_loc                    idx:1,6,17,other
 #        6699  WinMX              
 #        8080  Squid              
 #
-tcp_port_dst_in       idx:20,21,22,25,80,110,119,143,443,445,4661,4662,6881,6699,8080,other
-tcp_port_dst_out      idx:20,21,22,25,80,110,119,143,443,445,4661,4662,6881,6699,8080,other
-tcp_port_dst_loc      idx:20,21,22,25,80,110,119,143,443,445,4661,4662,6881,6699,8080,other
-tcp_port_syndst_in   idx:20,21,22,25,80,110,119,143,443,445,4661,4662,6881,6699,8080,other
-tcp_port_syndst_out  idx:20,21,22,25,80,110,119,143,443,445,4661,4662,6881,6699,8080,other
-tcp_port_syndst_loc  idx:20,21,22,25,80,110,119,143,443,445,4661,4662,6881,6699,8080,other
+tcp_port_dst_in       idx:20,21,22,25,80,110,119,143,443,445,8080,8889,8890,9000,other
+tcp_port_dst_out      idx:20,21,22,25,80,110,119,143,443,445,8080,8889,8890,9000,other
+tcp_port_dst_loc      idx:20,21,22,25,80,110,119,143,443,445,8080,8889,8890,9000,other
+tcp_port_syndst_in   idx:20,21,22,25,80,110,119,143,443,445,8080,8889,8890,9000,other
+tcp_port_syndst_out  idx:20,21,22,25,80,110,119,143,443,445,8080,8889,8890,9000,other
+tcp_port_syndst_loc  idx:20,21,22,25,80,110,119,143,443,445,8080,8889,8890,9000,other
 #=====================================================================
 #        UDP well known ports
 #---------------------------------------------------------------------
@@ -191,11 +156,12 @@ tcp_port_syndst_loc  idx:20,21,22,25,80,110,119,143,443,445,4661,4662,6881,6699,
 #        137   NETBIOS
 #        4672  eDonkey
 #        6346  Gnutella-svc
+#        33434 Traceroute
 #
-udp_port_dst_in       idx:53,67,68,69,123,137,4672,6346,other
-udp_port_dst_out      idx:53,67,68,69,123,137,4672,6346,other
-udp_port_dst_loc      idx:53,67,68,69,123,137,4672,6346,other
-udp_port_flow_dst     idx:53,67,68,69,123,137,4672,6346,other
+udp_port_dst_in       idx:53,67,68,80,123,137,33434,other
+udp_port_dst_out      idx:53,67,68,80,123,137,33434,other
+udp_port_dst_loc      idx:53,67,68,80,123,137,33434,other
+udp_port_flow_dst     idx:53,67,68,80,123,137,33434,other
 #
 #=====================================================================
 #        UDP connection lenght
@@ -226,13 +192,10 @@ tcp_opts_TS                 idx:1,2,3,4
 tcp_rtt_avg_in                      avg stdev min max prc:50,95,99
 tcp_rtt_avg_out                     avg stdev min max prc:50,95,99
 tcp_rtt_avg_loc                     avg stdev min max prc:50,95,99
-#== Uncomment the following lines if you want to connect 'cloud' related statistics
-tcp_rtt_c_avg_in                       avg stdev min max prc:50,95,99
-tcp_rtt_c_avg_out                      avg stdev min max prc:50,95,99
-tcp_rtt_nc_avg_in                      avg stdev min max prc:50,95,99
-tcp_rtt_nc_avg_out                     avg stdev min max prc:50,95,99
-
 #
+#       MPTCP: 1 = ok, 2 = client only set, 3 = server only set, 4 = none set
+#
+tcp_opts_MPTCP                 idx:1,2,3,4
 #
 #=====================================================================
 #        TCP connection lenght
@@ -263,11 +226,6 @@ tcp_rtt_nc_avg_out                     avg stdev min max prc:50,95,99
 #tcp_thru_s2c                    avg max stdev 
 tcp_thru_lf_c2s                 avg min max stdev prc:50,95,99
 tcp_thru_lf_s2c                 avg min max stdev prc:50,95,99
-#== Uncomment the following lines if you want to connect 'cloud' related statistics
-tcp_thru_lf_c_c2s                 avg min max stdev prc:50,95,99
-tcp_thru_lf_c_s2c                 avg min max stdev prc:50,95,99
-tcp_thru_lf_nc_c2s                 avg min max stdev prc:50,95,99
-tcp_thru_lf_nc_s2c                 avg min max stdev prc:50,95,99
 #
 #
 #=====================================================================
