reduce Tstat memory usage

--- a/monroe-mplane/tstat-conf/globals.conf
+++ b/monroe-mplane/tstat-conf/globals.conf
@@ -16,7 +16,7 @@
 ## E.g. with MAX_TCP_PAIRS = 180000 we suppose no more than 180000 flows are simultaneously active
 ##                 (taking the effect of TCP_SINGLETON_TIME and TCP_IDLE_TIME in consideration), value
 ##                 that might be sufficient for a mildly loaded probe on a 2Gbps link 
-# max_tcp_pairs = 180000
+# max_tcp_pairs = 1800
 
 ## MAX_UDP_PAIRS - Maximum number of concurrent UDP connection tracked by Tstat. 
 ##                 The higher the link speed, the larger this number, considering the memory footprint
@@ -24,13 +24,13 @@
 ## E.g. with MAX_UDP_PAIRS = 360000 we suppose no more than 360000 flows are simultaneously active
 ##                 (taking the effect of UDP_SINGLETON_TIME and UDP_IDLE_TIME in consideration), value
 ##                 that might be sufficient for a mildly loaded probe on a 2Gbps link 
-# max_udp_pairs = 360000
+# max_udp_pairs = 3600
 
 ## HASH_TABLE_SIZE - Connection records are stored in a hash table. 
 ##                   Buckets are linked lists sorted by most recent access.
 ##                   It should be an odd (possibly prime) value, larger than MAX_TCP_PAIRS and MAX_UDP_PAIRS,
 ##                   to better distribute the entries among the buckets
-# hash_table_size = 2000003
+# hash_table_size = 20003
 
 ## ------------------------------------------------------
 
@@ -89,7 +89,7 @@
 ## E.g. GC_SPLIT_RATIO = 10000 divides the garbage collection cycle in 10000 parts, checking each time
 ##                 MAX_TCP_PAIRS/10000 entries in the the TCP flow table and MAX_UDP_PAIRS/10000 entries
 ##                 in the UDP flow table.
-# gc_split_ratio = 10000
+# gc_split_ratio = 1000
 
 ## ------------------------------------------------------
 
