--- a/monroe-mplane/tstat-conf/rrd.conf
+++ b/monroe-mplane/tstat-conf/rrd.conf
@@ -16,18 +16,18 @@
 #
 L7_HTTP_num_in       idx:0,1,2,4,6,7,11,12,13,15,18
 L7_HTTP_num_out      idx:0,1,2,4,6,7,11,12,13,15,18
-L7_HTTP_num_loc      idx:0,1,2,4,6,7,11,12,13,15,18
+#L7_HTTP_num_loc      idx:0,1,2,4,6,7,11,12,13,15,18
 http_bitrate_in      idx:0,1,2,4,6,7,11,12,13,15,18
 http_bitrate_out     idx:0,1,2,4,6,7,11,12,13,15,18
-http_bitrate_loc     idx:0,1,2,4,6,7,11,12,13,15,18
+#http_bitrate_loc     idx:0,1,2,4,6,7,11,12,13,15,18
 #
 #  NETFLIX 7
 L7_WEB_num_in       idx:0,1,2,4,6,7
 L7_WEB_num_out      idx:0,1,2,4,6,7
-L7_WEB_num_loc      idx:0,1,2,4,6,7
+#L7_WEB_num_loc      idx:0,1,2,4,6,7
 web_bitrate_in      idx:0,1,2,4,6,7
 web_bitrate_out     idx:0,1,2,4,6,7
-web_bitrate_loc     idx:0,1,2,4,6,7
+#web_bitrate_loc     idx:0,1,2,4,6,7
 #=====================================================================
 #      TLS content identified
 #---------------------------------------------------------------------
@@ -46,7 +46,7 @@ web_bitrate_loc     idx:0,1,2,4,6,7
 #---------------------------------------------------------------------
 L7_UDP_num_in      idx:1,2,11,12,14,15,16,34,36,49,other
 L7_UDP_num_out     idx:1,2,11,12,14,15,16,34,36,49,other
-L7_UDP_num_loc     idx:1,2,11,12,14,15,16,34,36,49,other
+#L7_UDP_num_loc     idx:1,2,11,12,14,15,16,34,36,49,other
 #
 #=====================================================================
 #       TCP L7 flow identified
@@ -54,7 +54,7 @@ L7_UDP_num_loc     idx:1,2,11,12,14,15,16,34,36,49,other
 #---------------------------------------------------------------------
 L7_TCP_num_in      idx:0,11,15,28,33,37,38,39,49,other
 L7_TCP_num_out     idx:0,11,15,28,33,37,38,39,49,other
-L7_TCP_num_loc     idx:0,11,15,28,33,37,38,39,49,other
+#L7_TCP_num_loc     idx:0,11,15,28,33,37,38,39,49,other
 #
 #=====================================================================
 #       VIDEO content identified
@@ -63,10 +63,10 @@ L7_TCP_num_loc     idx:0,11,15,28,33,37,38,39,49,other
 #
 L7_VIDEO_num_in       idx:1,2,3,4,5,6,7,8,9,10,11,12,13
 L7_VIDEO_num_out      idx:1,2,3,4,5,6,7,8,9,10,11,12,13
-L7_VIDEO_num_loc      idx:1,2,3,4,5,6,7,8,9,10,11,12,13
+#L7_VIDEO_num_loc      idx:1,2,3,4,5,6,7,8,9,10,11,12,13
 video_rate_in      idx:1,2,3,4,5,6,7,8,9,10,11,12,13
 video_rate_out     idx:1,2,3,4,5,6,7,8,9,10,11,12,13
-video_rate_loc     idx:1,2,3,4,5,6,7,8,9,10,11,12,13
+#video_rate_loc     idx:1,2,3,4,5,6,7,8,9,10,11,12,13
 #
 #=====================================================================
 #        flow number
@@ -82,28 +82,28 @@ L4_flow_number                 idx:0,1
 #---------------------------------------------------------------------
 ip_bitrate_in                  idx:0,1,2
 ip_bitrate_out                 idx:0,1,2
-ip_bitrate_loc                 idx:0,1,2
+#ip_bitrate_loc                 idx:0,1,2
 #=====================================================================
 #         TCP application layer bitrate
 #  see tstat.h for L7_flow definition
 #---------------------------------------------------------------------
 tcp_bitrate_in      idx:0,11,15,28,33,37,38,39,49,other
 tcp_bitrate_out     idx:0,11,15,28,33,37,38,39,49,other
-tcp_bitrate_loc     idx:0,11,15,28,33,37,38,39,49,other
+#tcp_bitrate_loc     idx:0,11,15,28,33,37,38,39,49,other
 #=====================================================================
 #         UDP application layer bitrate
 #  see tstat.h for L7_flow definition
 #---------------------------------------------------------------------
 udp_bitrate_in       idx:1,2,11,12,14,15,16,34,36,49,other
 udp_bitrate_out      idx:1,2,11,12,14,15,16,34,36,49,other
-udp_bitrate_loc      idx:1,2,11,12,14,15,16,34,36,49,other
+#udp_bitrate_loc      idx:1,2,11,12,14,15,16,34,36,49,other
 #=====================================================================
 #       IP packet length
 # 		ADD SOME INTERESTING PACKET LENGTH
 #---------------------------------------------------------------------
 ip_len_in                       avg min max stdev prc:50,95,99 idx:40,1500,other
 ip_len_out                      avg min max stdev prc:50,95,99 idx:40,1500,other
-ip_len_loc                      avg min max stdev prc:50,95,99 idx:40,1500,other
+#ip_len_loc                      avg min max stdev prc:50,95,99 idx:40,1500,other
 #
 #
 #
@@ -114,7 +114,7 @@ ip_len_loc                      avg min max stdev prc:50,95,99 idx:40,1500,other
 #
 ip_protocol_in                     idx:1,6,17,41,other
 ip_protocol_out                    idx:1,6,17,41,other
-ip_protocol_loc                    idx:1,6,17,41,other
+#ip_protocol_loc                    idx:1,6,17,41,other
 #
 #
 #=====================================================================
@@ -141,10 +141,10 @@ ip_protocol_loc                    idx:1,6,17,41,other
 #
 tcp_port_dst_in       idx:20,21,22,25,80,110,119,143,443,445,8080,8889,8890,9000,other
 tcp_port_dst_out      idx:20,21,22,25,80,110,119,143,443,445,8080,8889,8890,9000,other
-tcp_port_dst_loc      idx:20,21,22,25,80,110,119,143,443,445,8080,8889,8890,9000,other
+#tcp_port_dst_loc      idx:20,21,22,25,80,110,119,143,443,445,8080,8889,8890,9000,other
 tcp_port_syndst_in   idx:20,21,22,25,80,110,119,143,443,445,8080,8889,8890,9000,other
 tcp_port_syndst_out  idx:20,21,22,25,80,110,119,143,443,445,8080,8889,8890,9000,other
-tcp_port_syndst_loc  idx:20,21,22,25,80,110,119,143,443,445,8080,8889,8890,9000,other
+#tcp_port_syndst_loc  idx:20,21,22,25,80,110,119,143,443,445,8080,8889,8890,9000,other
 #=====================================================================
 #        UDP well known ports
 #---------------------------------------------------------------------
@@ -160,7 +160,7 @@ tcp_port_syndst_loc  idx:20,21,22,25,80,110,119,143,443,445,8080,8889,8890,9000,
 #
 udp_port_dst_in       idx:53,67,68,80,123,137,33434,other
 udp_port_dst_out      idx:53,67,68,80,123,137,33434,other
-udp_port_dst_loc      idx:53,67,68,80,123,137,33434,other
+#udp_port_dst_loc      idx:53,67,68,80,123,137,33434,other
 udp_port_flow_dst     idx:53,67,68,80,123,137,33434,other
 #
 #=====================================================================
@@ -191,7 +191,7 @@ tcp_opts_TS                 idx:1,2,3,4
 #---------------------------------------------------------------------
 tcp_rtt_avg_in                      avg stdev min max prc:50,95,99
 tcp_rtt_avg_out                     avg stdev min max prc:50,95,99
-tcp_rtt_avg_loc                     avg stdev min max prc:50,95,99
+#tcp_rtt_avg_loc                     avg stdev min max prc:50,95,99
 #
 #       MPTCP: 1 = ok, 2 = client only set, 3 = server only set, 4 = none set
 #
@@ -243,7 +243,7 @@ tcp_thru_lf_s2c                 avg min max stdev prc:50,95,99
 #
 tcp_anomalies_out   idx:0,1,2,3,4,5,6,7,63
 tcp_anomalies_in    idx:0,1,2,3,4,5,6,7,63
-tcp_anomalies_loc    idx:0,1,2,3,4,5,6,7,63
+#tcp_anomalies_loc    idx:0,1,2,3,4,5,6,7,63
 #
 #
 #=====================================================================
@@ -352,7 +352,7 @@ tcp_anomalies_loc    idx:0,1,2,3,4,5,6,7,63
 #---------------------------------------------------------------------
 mm_type_in                 idx:4,6,7,8
 mm_type_out                 idx:4,6,7,8
-mm_type_loc                 idx:4,6,7,8
+#mm_type_loc                 idx:4,6,7,8
 #
 #
 #=====================================================================
