--- a/monroe-mplane/tstat.conf
+++ b/monroe-mplane/tstat.conf
@@ -7,4 +7,4 @@
 -H tstat-conf/histo.conf            # histogram configuration
 -T tstat-conf/runtime.conf          # runtime configuration file
 -r /outdir/tstat_rrd         	  	# RRD output directory
--s /outdir/114        # output dir for log files
+-s /tstat_log        # output dir for log files
